<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.todoapplication.ui.activity.NewTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_header_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_task"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_task_name_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/task_name"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_header_new_task" />

            <EditText
                android:id="@+id/edt_task_name_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/example_wake_up"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/tv_task_name_new_task" />

            <TextView
                android:id="@+id/tv_date_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/edt_task_name_new_task" />

            <com.vivekkaushik.datepicker.DatePickerTimeline
                android:id="@+id/datePickerTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_date_new_task" />

            <TextView
                android:id="@+id/tv_time_new_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/datePickerTimeline" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:timePickerMode="spinner"
                app:layout_constraintTop_toBottomOf="@id/tv_time_new_task" />

            <Button
                android:id="@+id/btn_add_new_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_new_task"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timePicker" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>